--- a/frontend/src/components/ChatArea/MessageList/MessageList.module.scss
+++ b/frontend/src/components/ChatArea/MessageList/MessageList.module.scss
@@ -9,8 +9,6 @@
 	display: flex;
 	flex-direction: column;
 	padding: 10px;
-	margin-right: -8px;
-	padding-right: 4px;
 	overflow-y: auto;
 	scrollbar-gutter: stable;
 	flex: 1;
